Update fichier de config
